labels trmoved glucose
